# gpt-computer

./: ROADMAP.md  pyproject.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  label-approved.yml  labeler.yml  latest-changes.yml  publish.yml  security.yml
gpt_computer/applications/cli/: main.py
gpt_computer/codemap/: __init__.py  analyzer.py  cli.py  graph.py  models.py  visualizer.py
gpt_computer/context_os/: __init__.py  agent_orchestrator.py  context_manager.py  execution_fabric.py  models.py  world_model.py
gpt_computer/core/: project_config.py  structured_logging.py
gpt_computer/core/agent/: react.py
gpt_computer/core/default/: simple_agent.py
gpt_computer/repository_intelligence/: __init__.py  cli.py  debug_agent.py  explain_agent.py  knowledge_graph.py  models.py  refactor_agent.py  security_agent.py  tree_sitter_analyzer.py  visualization_agent.py
profile/: README.md
scripts/: translate.py
tests/: mock_ai.py  test_async_ai.py  test_install.py
tests/core/: test_logging.py  test_token_usage.py
tests/core/default/: test_steps.py
