[project]
name = "gpt-computer"
version = "0.1.1"
description = "Specify what you want it to build, the AI asks for clarification, and then builds it."
authors = [{name = "Md Sulaiman", email = "infosulaimanbd@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/xeondesk/gpt-computer"
repository = "https://github.com/xeondesk/gpt-computer"
documentation = "https://gpt-computer.readthedocs.io/en/latest/"
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "backoff>=2.2.1",
    "black>=26.3.1",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "pillow>=12.1.1",
    "pyperclip>=1.11.0",
    "regex>=2026.3.32",
    "termcolor>=3.3.0",
    "toml>=0.10.2",
    "tomlkit>=0.14.0",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = [
    "openai>=1.0",
    "termcolor==2.3.0",
    "typer>=0.3.2",
    "rudder-sdk-python>=2.0.2",
    "dataclasses-json==0.5.7",
    "tiktoken>=0.0.4",
    "tabulate==0.9.0",
    "python-dotenv>=0.21.0",
    "langchain>=0.1.2",
    "langchain_openai",
    "toml>=0.10.2",
    "tomlkit>=0.12.4",
    "pyperclip>=1.8.2",
    "langchain-anthropic>=0.1.1",
    "regex>=2023.12.25",
    "pillow>=10.2.0",
    "datasets>=2.17.1",
    "black==23.3.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.1",
    "langchain-groq>=0.1.0",
    "langchain-mistralai>=0.1.0",
    "langchain-cohere>=0.1.4",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.40",
    "packaging>=23.2",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy==1.20.0",
    "ruff>=0.0.272",
    "pre-commit==3.3.3",
    "tox>=3.0.0",
]
docs = [
    "autodoc_pydantic>=1.8.0",
    "myst_parser>=0.18.1",
    "nbsphinx>=0.8.9",
    "sphinx>=5.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx_book_theme>=0.3.3",
    "sphinx_rtd_theme>=1.0.0",
    "sphinx-typlog-theme>=0.8.0",
    "toml>=0.10.2",
    "myst-nb>=0.17.1",
    "linkchecker>=10.2.1",
    "sphinx-copybutton>=0.5.1",
    "markdown-include>=0.6.0",
    "sphinx_copybutton>=0.5.2",
]

[project.scripts]
gpt-computer = 'gpt_computer.applications.cli.main:app'
ge = 'gpt_computer.applications.cli.main:app'
gptc = 'gpt_computer.applications.cli.main:app'
bench = 'gpt_computer.benchmark.__main__:app'
gptc_test_application = 'tests.caching_main:app'

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
doc = [
  "autodoc_pydantic",
  "myst_parser",
  "nbsphinx",
  "sphinx",
  "sphinx-autobuild",
  "sphinx_book_theme",
  "sphinx_rtd_theme",
  "sphinx-typlog-theme",
  "myst-nb",
  "linkchecker",
  "sphinx-copybutton",
  "markdown-include",
  "sphinx_copybutton",
]

[tool.ruff]
select = ["F", "E", "W", "I001"]
show-fixes = false
target-version = "py310"
task-tags = ["TODO", "FIXME"]
extend-ignore = ["E501", "E722"]

[tool.black]
target-version = ["py310"]

[tool.ruff.isort]
known-first-party = []
known-third-party = []
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--verbose",
  "--tb=short",
]
markers = [
  "requires_key: marks tests as requiring access to a valid OPENAI_API_KEY (deselect with '-m \"not requires_key\"')",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "api: marks tests related to API endpoints",
  "asyncio: marks tests as async",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["gpt_computer"]
branch = true
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__main__.py",
  "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@abstractmethod",
  "class .*\\(Protocol\\):",
]

[tool.coverage.html]
directory = "htmlcov"
